190920 JSP / 게시판 답글 처리, 게시판 첨부파일 /

--- a/09_BBS/src/com/bbs/controller/mapping.properties
+++ b/09_BBS/src/com/bbs/controller/mapping.properties
@@ -5,8 +5,8 @@ cont.do=execute|com.bbs.action.BbsContAction
 edit.do=execute|com.bbs.action.BbsEditAction
 edit_ok.do=execute|com.bbs.action.BbsEditOkAction
 delete_ok.do=execute|com.bbs.action.BbsDeleteOkAction
-
-
+reply.do=execute|com.bbs.action.BbsReplyAction
+reply_ok.do=execute|com.bbs.action.BbsReplyOkAction
 
 
 
