--- a/MyProject(JSP)/WebContent/WEB-INF/web.xml
+++ b/MyProject(JSP)/WebContent/WEB-INF/web.xml
@@ -10,14 +10,15 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-<!-- <servlet>
-    <servlet-name>usersignup</servlet-name>
-    <servlet-class>com.sist.controller.UserSignup</servlet-class>
+ <servlet>
+    <servlet-name>FrontController</servlet-name>
+    <servlet-class>com.sist.controller.FrontController</servlet-class>
   </servlet>
+  
   <servlet-mapping>
-    <servlet-name>usersignup</servlet-name>
-    <url-pattern>/usersignup</url-pattern>
-  </servlet-mapping> -->
+    <servlet-name>FrontController</servlet-name>
+    <url-pattern>*.do</url-pattern>
+  </servlet-mapping>
 
 </web-app>
 
